# K.A.O.S

./: .commitlintrc.json  .env.example  .gitignore  .gitmodules  .opencode.json  .releaserc.json  CHANGELOG.md  ORDEM_IMPLEMENTACAO.md  ORDEM_KNOWLEDGE_GRAPH.md  PROJECT_HEALTH.md  README.md  package.json  pyproject.toml  setup.ps1
assistant/: .coverage  .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  pyproject.toml
assistant/app/: database.py  main.py
assistant/app/agent/: graph.py  state.py
assistant/app/api/: admin.py  agents_api.py  apps_api.py  architecture.py  audit.py  auth.py  automation.py  capabilities.py  chat.py  conversations.py  docs.py  evidence_api.py  feature_flags.py  graph_api.py  health.py  indexing.py  inference_api.py  integrations.py  kirl.py  knowledge_api.py  mcp.py  memory_api.py  models.py  notifications.py  observability.py  openai.py  opencode.py  orchestrator.py  planner_api.py  plugins.py  prompts.py  provider_configs.py  providers.py  rag.py  secrets.py  settings_api.py  setup.py  system.py  user_model_profiles.py  users.py  (+3 more)
assistant/app/apps/: __init__.py  base.py  registry.py
assistant/app/audit/: audit_engine.py  code_scanner.py  commit_classifier.py  commit_mapper.py  drift_subscriber.py  drl_snapshot.py  feature_registry.py  frontmatter_parser.py  readiness_engine.py  runtime_resolver.py  sdd_generator.py  sdd_resolver.py  sdd_watcher.py  vault_sync.py
assistant/app/auth/: handshake.py  hash.py  jwt.py
assistant/app/capability/: registry.py
assistant/app/config/: prompts.py  settings.py
assistant/app/core/: __init__.py  automation_bus.py  automation_sdk.py  bootstrap_manager.py  config_service.py  credential_service.py  environment_service.py  knowledge_graph_watcher.py  mcp_health.py  mcp_manager.py  mcp_registry.py  mcp_server_base.py  opencode_executor.py  opencode_watcher.py  plugin_registry.py  plugin_sandbox.py  provider_registry.py  runtime_path_resolver.py  secret_manager.py
assistant/app/dependencies/: __init__.py  services.py
assistant/app/domain/: __init__.py  chat.py  command.py  context.py  document.py  event.py  execution_plan.py  identity.py  intent.py  memory.py  user.py  workflow.py
assistant/app/llm/: __init__.py  factory.py  metrics.py  provider.py
assistant/app/memory/: memory_service.py  models.py  postgres_repository.py  repository.py  summarizer.py
assistant/app/middleware/: auth.py  user_context.py
assistant/app/models/: __init__.py  automation_registry.py  capability_policy.py  conversation.py  cost_event.py  model_registry.py  model_router.py  prompt.py  user.py
assistant/app/notifications/: models.py  service.py
assistant/app/observability/: __init__.py  cost_tracker.py  event_bus.py  execution_context.py  tracing.py
assistant/app/obsidian/: vault_init.py  wiki_pipeline.py
assistant/app/orchestrator/: circuit_breaker.py  dead_letter_queue.py  health_cache.py  plan_executor.py  provider_selector.py  universal_orchestrator.py
assistant/app/providers/: __init__.py  register_all.py
assistant/app/registry/: service_registry.py
assistant/app/repositories/: capability_policy_repository.py  conversation_repository.py  cost_repository.py  failed_execution_repository.py  feature_flag_repository.py  (+4 more)
assistant/data/: api_key.txt
assistant/migrations/: env.py
assistant/scripts/: audit_desktop.py  audit_docs.py  audit_pr_docs.py  bootstrap_feature_registry.py  final_check.py  generate_feature_catalog.py  migrate_memory_to_postgres.py  reindex_with_cache.py  run-local.bat  run-local.ps1  run.ps1  setup.bat  setup.ps1  setup.sh  sync_github_registry.py  validate.py  validate_documentation.py
assistant/tests/: test_automation.py  test_chat.py  test_health.py  test_indexing.py  test_openai.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json  update-proxy.json
(+688 files in other folders)
