[project]
name = "kaos-platform"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.115.0,<0.137",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    "watchdog>=4.0.0",
    "ollama>=0.6.2",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg[pool]>=3.1.0",
    "einops>=0.8.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
