[project]
name = "kaos-platform"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi>=0.115.0,<0.137",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    "watchdog>=4.0.0",
    "ollama>=0.6.2",
    "sqlalchemy>=2.0.0",
    "psycopg[pool]>=3.1.0",
    "psycopg-binary>=3.3.0",
    "einops>=0.8.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pytest-cov>=7.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "alembic>=1.18.5",
    "psutil>=7.2.2",
    "pynacl>=1.6.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:cacheprovider"
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio"]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "migrations/*",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
